--- a/code_anim.html
+++ b/code_anim.html
@@ -13,7 +13,7 @@
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model rotation="0 0 0 " position="0 -1 -1000000" scale="0.000001 0.000001 0.000001" src="#avatarModel"
+        <a-gltf-model rotation="0 0 0 " position="0 -0.001 -10000" scale="0.00001 0.00001 0.00001" src="#avatarModel"
           animation__1="property: rotation; to: 0 360 0; loop: true; dur: 10000; dir: alternate";
 	  animation__2="property: position; to: 0 0.1 0.1; dur: 1000; loop: true; dir: alternate";
       </a-entity>
