--- a/code_gesture.html
+++ b/code_gesture.html
@@ -36,7 +36,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="arjs-loader">
-        <div>LIBM AR LAB 
+        <div>INNO801 Projet SYP 
 		<br/>
 		Loading, please wait...
 	    <br/>
@@ -49,7 +49,7 @@
 	  <br>
 	 B.MOREL - M.BOWEN 
 	<br>
-	<a href='https://libm.univ-st-etienne.fr/fr/index.html' target='_blank'>LIBM Laboratory</a>
+	<!--a href='https://libm.univ-st-etienne.fr/fr/index.html' target='_blank'>LIBM Laboratory</a-->
 </div>
 	  
     <div style='font-family: Monospace; position: absolute; bottom: 10px; width:100%; text-align: center; z-index: 1;'>
@@ -72,7 +72,7 @@
    
 	        <a-nft
         type="nft"
-        url="https://maxdepeuf.github.io/codeAR/fig/fig"
+        url="https://github.com/Vonderscher1000N/Code_AR/fig/targets_mylene.mind"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -82,7 +82,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://maxdepeuf.github.io/codeAR/model/pvt3.glb"
+          gltf-model="https://github.com/Vonderscher1000N/Code_AR/model/corpsaimantsglb.glb"
 	  scale="75 75 75"
           rotation= '-5 180 -40'
 	  position="50 10 -80"
