--- a/code_gesture.html
+++ b/code_gesture.html
@@ -49,7 +49,7 @@
 	  <br>
 	 B.MOREL - M.BOWEN 
 	<br>
-	<!--a href='https://libm.univ-st-etienne.fr/fr/index.html' target='_blank'>LIBM Laboratory</a-->
+	<a href='https://libm.univ-st-etienne.fr/fr/index.html' target='_blank'>LIBM Laboratory</a>
 </div>
 	  
     <div style='font-family: Monospace; position: absolute; bottom: 10px; width:100%; text-align: center; z-index: 1;'>
