--- a/code_gesture.html
+++ b/code_gesture.html
@@ -72,7 +72,7 @@
    
 	        <a-nft
         type="nft"
-        url="https://github.com/Vonderscher1000N/Code_AR/target/targets_mylene.mind"
+        url="https://github.com/Vonderscher1000N/Code_AR/fig/Capturetarget"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
