--- a/code_gesture.html
+++ b/code_gesture.html
@@ -72,7 +72,7 @@
    
 	        <a-nft
         type="nft"
-        url="https://github.com/Vonderscher1000N/Code_AR/fig/Capturetarget"
+        url="https://Vonderscher1000N.github.io/Code_AR/fig/Capturetarget"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -82,7 +82,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://github.com/Vonderscher1000N/Code_AR/model/corpsaimantglb.glb"
+          gltf-model="https://Vonderscher1000N.github.io/Code_AR/model/corpsaimantglb.glb"
 	  scale="75 75 75"
           rotation= '-5 180 -40'
 	  position="50 10 -80"
