--- a/code_gesture.html
+++ b/code_gesture.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>AR LAB LIBM</title>
+    <title> USMB M1 IEAP </title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="styles.css" />
@@ -44,12 +44,12 @@
     </div>
   
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
-	B.MOREL - M.BOWEN
-	3D AR Exhaustion Model
+	DOUMAISELLE - FANGET - HARIVEL - LAFARGE - VONDERSCHER
+	3D SYP Model
 	  <br>
-	 B.MOREL - M.BOWEN 
+	 - 
 	<br>
-	<a href='https://libm.univ-st-etienne.fr/fr/index.html' target='_blank'>LIBM Laboratory</a>
+	<a href='https://www.instagram.com/save_your_poles_syp/.html' target='_blank'>Instagram SYP</a>
 </div>
 	  
     <div style='font-family: Monospace; position: absolute; bottom: 10px; width:100%; text-align: center; z-index: 1;'>
@@ -82,10 +82,10 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/corpsaimantglb.glb"
-	  scale="1000 1000 1000"
+          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/SYPtexture.glb"
+	  scale="1 1 1"
           rotation= '0 0 0'
-	  position="5 1 -80"
+	  position="0 0 0"
 	  material="side: double"
           class="clickable"
           gesture-handler="minScale: 0.5; maxScale: 2"
