--- a/code_gesture.html
+++ b/code_gesture.html
@@ -83,12 +83,12 @@
       >
         <a-entity
           gltf-model="https://vonderscher1000n.github.io/Code_AR/model/SYPtexture.glb"
-	  scale="10 10 10"
+	  scale="1000000000 1000000000 1000000000"
           rotation= '0 0 0'
-	  position="50 10 -80"
+	  position="0 0 0"
 	  material="side: double"
           class="clickable"
-          gesture-handler="minScale: 0.5; maxScale: 100000"
+          gesture-handler="minScale: 0.5; maxScale: 2"
 		         >
         </a-entity>
       </a-nft>
