--- a/code_gesture.html
+++ b/code_gesture.html
@@ -40,12 +40,11 @@
 		<br/>
 		Loading, please wait...
 	    <br/>
-		After loading, center the camera on the surface.</div>
+		After loading, center the camera on the figure.</div>
     </div>
   
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
 	DOUMAISELLE - FANGET - HARIVEL - LAFARGE - VONDERSCHER
-	3D SYP Model
 	  <br>
 	 - 
 	<br>
@@ -72,7 +71,7 @@
    
 	        <a-nft
         type="nft"
-        url="https://vonderscher1000n.github.io/Code_AR/fig/Capturetarget"
+        url="https://vonderscher1000n.github.io/Code_AR/fig/fig"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -82,8 +81,8 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/SYPtexture.glb"
-	  scale="1000000000 1000000000 1000000000"
+          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/pvt3.glb"
+	  scale="1000 1000 1000"
           rotation= '0 0 0'
 	  position="0 0 0"
 	  material="side: double"
