--- a/code_gesture.html
+++ b/code_gesture.html
@@ -40,7 +40,7 @@
 		<br/>
 		Loading, please wait...
 	    <br/>
-		After loading, center the camera on the figure.</div>
+		After loading, center the camera on the figure....</div>
     </div>
   
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
@@ -71,7 +71,7 @@
    
 	        <a-nft
         type="nft"
-        url="https://vonderscher1000n.github.io/Code_AR/fig/fig"
+        url="https://vonderscher1000n.github.io/Code_AR/fig/Capturetarget"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -81,13 +81,13 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/pvt3.glb"
-	  scale="100 100 100"
+          gltf-model="https://vonderscher1000n.github.io/Code_AR/model/SYPtexture.glb"
+	  scale="1000 1000 1000"
           rotation= '0 0 0'
 	  position="50 10 -80"
 	  material="side: double"
           class="clickable"
-          gesture-handler="minScale: 0.5; maxScale: 2"
+          gesture-handler="minScale: 0.1; maxScale: 50"
 		         >
         </a-entity>
       </a-nft>
