--- a/code_gesture.html
+++ b/code_gesture.html
@@ -40,7 +40,7 @@
 		<br/>
 		Loading, please wait...
 	    <br/>
-		After loading, center the camera on the figure....</div>
+		After loading, center the camera on the figure.</div>
     </div>
   
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
