--- a/code_gesture.html
+++ b/code_gesture.html
@@ -48,7 +48,7 @@
 	  <br>
 	 - 2
 	<br>
-	<a href='https://www.instagram.com/save_your_poles_syp/.html' target='_blank'>Instagram SYP</a>
+	<a href='https://www.instagram.com/save_your_poles_syp.html' target='_blank'>Instagram SYP</a>
 </div>
 	  
     <div style='font-family: Monospace; position: absolute; bottom: 10px; width:100%; text-align: center; z-index: 1;'>
