--- a/code_gesture.html
+++ b/code_gesture.html
@@ -48,7 +48,7 @@
 	  <br>
 	 - 
 	<br>
-	<a href='https://www.instagram.com/save_your_poles_syp.html' target='_blank'>Instagram SYP</a>
+	<a href='https://www.instagram.com/save_your_poles_syp' target='_blank'>Instagram SYP</a>
 </div>
 	  
     <div style='font-family: Monospace; position: absolute; bottom: 10px; width:100%; text-align: center; z-index: 1;'>
@@ -84,7 +84,7 @@
           gltf-model="https://vonderscher1000n.github.io/Code_AR/model/SYPtexture.glb"
 	  scale="10 10 10"
           rotation= '0 0 0'
-	  position="200 200 500"
+	  position="200 10 350"
 	  material="side: double"
           class="clickable"
           gesture-handler="minScale: 0.01; maxScale: 40"
