--- a/Code_anglais_a.html
+++ b/Code_anglais_a.html
@@ -30,13 +30,14 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="arjs-loader">
-        <div>ANGL801 The paddle-izer 
+        <div>ANGL801 The Paddle-izer 
 		<br/>
 		Loading, please wait...
 	    <br/>
 		After loading, center the camera on the figure.</div>
     </div>
-  
+ </body>
+<body>
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
 	DOUMAISELLE - LAFARGE - VONDERSCHER
 	  <br>
@@ -48,7 +49,7 @@
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="100 100 100" src="#avatarModel"
+        <a-gltf-model rotation="0 0 0 " position="0 0 10" scale="200 200 200" src="#avatarModel"
           animation__1="property: rotation; to: 180 360 180; loop: true; dur: 10000; dir: alternate";
 	  animation__2="property: position; to: 0 0.1 0.1; dur: 1000; loop: true; dir: alternate";
       </a-entity>
