--- a/Code_anglais_a.html
+++ b/Code_anglais_a.html
@@ -28,19 +28,13 @@
     }
 </style>
 
-<body style='margin : 0px; overflow: hidden;'>
-    <div class="arjs-loader">
-        <div>ANGL801 The Paddle-izer 
-		<br/>
-		Loading, please wait...
-	    <br/>
-		After loading, center the camera on the figure.</div>
-    </div>
- </body>
-<body>
+
   <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
 	DOUMAISELLE - LAFARGE - VONDERSCHER
 	  <br>
+           - 
+        <br>
+    The Paddle-izer
 </div>
 
     <a-scene mindar-image="imageTargetSrc: https://vonderscher1000n.github.io/Code_AR/target/target_anglais.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
