--- a/Code_anglais_b.html
+++ b/Code_anglais_b.html
@@ -6,37 +6,7 @@
     <script src="mindar-image-aframe.prod.js"></script>
       <script src="aframe-gif-shader.min.js"></script>
   </head>
-  
-	  <style>
-    .arjs-loader {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 9999;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .arjs-loader div {
-        text-align: center;
-        font-size: 1.25em;
-        color: white;
-    }
-</style>
-
-
-  <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='font-family: Monospace; position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
-	DOUMAISELLE - LAFARGE - VONDERSCHER
-	  <br>
-           - 
-        <br>
-    The Paddle-izer
-</div>
-
+  <body>  
     <a-scene mindar-image="imageTargetSrc: https://vonderscher1000n.github.io/Code_AR/target/target_anglais.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
     <a-asset-item id="avatarModel" src="https://vonderscher1000n.github.io/Code_AR/model/anglais.glb"></a-asset-item>
